# sample

./: .gitignore
atcoder/: build.sh  dev.Dockerfile
boatapp-poc/: package-lock.json
boatapp-poc-example/: package-lock.json  package.json
boatdb-poc/: .gitignore  install.sh
calculus/: .dockerignore  build-dev-environment.sh  dev.arm64.Dockerfile  init.sh  sample.ipynb  section_1.py
cognito-auth-sample/: README.md  nuxt.config.js  package.json
command-line-for-rust/: build-multipass.sh  dev.arm64.Dockerfile
data-structures-and-algorithms-by-rust/: build-dev-enviornment.sh  build-multipass.sh  dev.arm64.Dockerfile
deeplearning-from-scratch-03/: build-multipass-dev-container.sh  dev.arm64.Dockerfile  pyproject.toml  run.py
elasticsearch-sample/: docker-compose.yml
elasticsearch-sample/elasticsearch-v7-sudachi/api/: .gitignore  build-elasticsearch-sample-api-multipass-arm64.sh  build-multipass-arm64.sh  dev.arm64.Dockerfile  pyproject.toml  run.py
elasticsearch-sample/elasticsearch-v7-sudachi/api/api/: model.py  pipeline.py  visualize.py
elasticsearch-sample/elasticsearch-v7-sudachi/python-client/: pyproject.toml
hands-on-data-structures-and-algorithms-with-rust/: build-multipass-dev-container.sh
kubobook/: .gitignore  load_dataset.sh
linear-algebra/: build-multipass.sh  dev.arm64.Dockerfile
linear-algebra/formula/: pyproject.toml
parcel-react-ts-sample/: index.html  package-lock.json  package.json
percel-react-ts-sample/: app.tsx  package-lock.json  package.json
practical-aws-cdk/: .eslintrc.js  init.sh
puppeteer-crawler/: build.sh  crawl-orangepage-recipe.js  dev.Dockerfile  find-orangepage-time-20191004.js  package-lock.json  package.json
speed-up-your-python-with-rust/: build-multipass-arm64.sh  build-multipass-x86_64.sh  dev.arm64.Dockerfile  dev.x86_64.Dockerfile
terraform-cloudrun-example/: .terraform.lock.hcl  main.tf  variables.tf
vault-kong-plugin-sample/: build-multipass-dev-container.sh  dev.Dockerfile  hello  hello.go  hello_test.go
vault-sample/: build-multipass-dev-container.sh  build.sh  (+1 more)
vault-sample/vault_sample/: README.md  create-sample-readonly-role.sh  env-settings.sh  nortification.py  postgres_sample.py  pyproject.toml  python311-install-for-ubuntu2004.sh  run-vault-dev-server.sh  run.py  totp.py  vault-install.sh
(+109 files in other folders)
