[tool.poetry]
name = "vault-sample"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "vault_sample"}]

[tool.poetry.dependencies]
python = "^3.11"
hvac = "^1.1.0"
psycopg2-binary = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
