[tool.poetry]
name = "fakenews-api"
version = "0.1.0"
description = "api for fakenews detection"
authors = ["tsukudamayo"]
readme = "README.md"
packages = [{include = "fakenews_api"}]

[tool.poetry.dependencies]
python = "^3.9"
SudachiPy = "^0.6.6"
SudachiDict-core = "^20220729"
seaborn = "^0.12.0"
pke = {git = "https://github.com/boudinfl/pke.git"}
ginza = "^5.1.2"
ja-ginza = "^5.1.2"
scipy = "^1.9.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
