[tool.poetry]
name = "fake-fij-es-client"
version = "0.1.0"
description = "elasticsearch client for fif fakenews dataset"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
elasticsearch = "^8.3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
